seperated more style into css, more compact logic

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -2,6 +2,6 @@ select_chat=Chat auswählen
 sent_message=Senden
 create_new_chat=Neuen Chat erzeugen
 show_previous_chats=Vorherige Chats zeigen
-new_chat=Neuer Chat
+new_chat=Neuer Chat erstellt mit ID:
 already_new_chat=Du hast schon einen neuen Chat
 chat_from=Chat vom:
