finally a dynamic menu

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -1,7 +1,6 @@
-select_chat=Chat auswählen
 sent_message=Senden
 create_new_chat=Neuen Chat erzeugen
-show_previous_chats=Vorherige Chats zeigen
+previous_chats=Vorherige Chats:
 new_chat=Neuer Chat erstellt mit ID:
 already_new_chat=Du hast schon einen neuen Chat
 chat_from=Chat vom:
