--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,7 +1,6 @@
-select_chat=Select chat
 sent_message=Send
 create_new_chat=Create new chat
-show_previous_chats=Show previous chats
+previous_chats=Previous chats:
 new_chat=New chat created with ID:
 already_new_chat=You already have a new chat
 chat_from=Chat from:
