fixed some design issues and made warnings multilingual

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -3,4 +3,6 @@ create_new_chat=Neuen Chat erzeugen
 previous_chats=Vorherige Chats:
 new_chat=Neuer Chat erstellt mit ID:
 already_new_chat=Du hast schon einen neuen Chat
+already_new_chats=Es gibt schon neue leere Chats im Speicher
+empty_chat_loaded=Das zuletzt erstellter leerer Chat wird geladen:
 chat_from=Chat vom:
