--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,4 +3,6 @@ create_new_chat=Create new chat
 previous_chats=Previous chats:
 new_chat=New chat created with ID:
 already_new_chat=You already have a new chat
+already_new_chats=There are already empty chats in the storage
+empty_chat_loaded=The last empty chat will be loaded:
 chat_from=Chat from:
